--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         :root {
             --color1: #ff00ff;
-            --color2: #00ffff;
+            --color2: #1905f2;
             --glow: 15px;
             --controls-width: 300px;
             --animation-width: min(90vw, 1200px);
@@ -43,7 +43,7 @@
             background-clip: text;
             color: transparent;
             margin: 0 0 20px;
-            font-size: 2.2em;
+            font-size: 1.2em;
             letter-spacing: 2px;
             text-shadow: 
                 0 0 10px var(--color1),
