--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             </div>
             <div class="color-picker control-group">
                 <label for="color2">🌚 Secondary Color</label>
-                <input type="color" id="color2" value="#00ffff">
+                <input type="color" id="color2" value="#1905f2">
             </div>
         </div>
         
