--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         
         body {
             margin: 0;
+            padding-top: 0;
             overflow: hidden;
             background-color: #000;
             font-family: 'Arial', sans-serif;
