--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            padding: 20px;
+            justify-content: flex-start; /* CHANGED from 'center' */
+            padding: 5px 20px 20px 20px; /* CHANGED: top=5px, kept others=20px */
             overflow: hidden;
         }
         
